# ChangeLog for net-libs/webkit-gtk
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.276 2014/08/23 15:33:40 ago Exp $

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Samuli Suominen <ssuominen@gentoo.org>
  +files/webkit-gtk-2.4.4-jpeg-9a.patch, webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Fix building with media-libs/jpeg >= 9a wrt #481688 by Maurice van der Pot

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Stable for ppc64, wrt bug #512012

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Stable for ppc, wrt bug #512012

  27 Jul 2014; Pacho Ramos <pacho@gentoo.org>
  +files/webkit-gtk-2.4.4-atomic-ppc.patch, webkit-gtk-2.4.4.ebuild:
  Fix building on ppc (from OpenBSD, only needed on slot 3), bug #518288 by ago

  23 Jul 2014; Pacho Ramos <pacho@gentoo.org> -webkit-gtk-2.4.3-r200.ebuild,
  -webkit-gtk-2.4.3.ebuild, webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Reintroduce the ugly hack for nvidia setups as it keeps hanging in some. Drop
  old.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
  webkit-gtk-2.4.4.ebuild:
  Stable for amd64, wrt bug #512912

*webkit-gtk-2.4.4-r200 (14 Jul 2014)
*webkit-gtk-2.4.4 (14 Jul 2014)

  14 Jul 2014; Pacho Ramos <pacho@gentoo.org> +webkit-gtk-2.4.4-r200.ebuild,
  +webkit-gtk-2.4.4.ebuild:
  Version bump

  21 Jun 2014; Pacho Ramos <pacho@gentoo.org> -webkit-gtk-2.4.1-r200.ebuild,
  -webkit-gtk-2.4.1.ebuild, webkit-gtk-2.4.3-r200.ebuild,
  webkit-gtk-2.4.3.ebuild:
  Try to avoid issues like bug #463960
