@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.276 2014/08/23 15:33:40 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.277 2014/08/25 11:03:04 ago Exp $
+
+  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
+  webkit-gtk-2.4.4.ebuild:
+  Stable for alpha, wrt bug #512012
 
   23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.4-r200.ebuild,
   webkit-gtk-2.4.4.ebuild:
